# GMOO

./: README.txt
mogap/: CMakeLists.txt  chromosome.cpp  chromosome.h  main.cpp  mogap.cpp  mogap.h  notes.txt  tests.cpp
sudoku/: .Rhistory  main.cpp  main.py  plots.Rmd  results.csv  results_noPurge.csv  run.sh
sudoku/data/: avg.csv  avg_fixed10_purgefalse.csv  avg_fixed10_purgetrue.csv  avg_fixed20_purgefalse.csv  avg_fixed20_purgetrue.csv  avg_fixed30_purgefalse.csv  avg_fixed30_purgetrue.csv  avg_fixed40_purgefalse.csv  avg_fixed40_purgetrue.csv  max.csv  max_fixed10_purgefalse.csv  max_fixed10_purgetrue.csv  max_fixed20_purgefalse.csv  max_fixed20_purgetrue.csv  max_fixed30_purgefalse.csv  max_fixed30_purgetrue.csv  max_fixed40_purgefalse.csv  max_fixed40_purgetrue.csv
